<resources>
    <string name="app_name">Dr Huellitas</string>
    <string name="imagen">Imagen</string>
    <string name="bienvenido">Bienvenido a Dr Huellitas</string>
    <string name="continuar">Para continuar inicie sesión</string>
    <string name="iniciar">INICIAR SESIÓN</string>
    <string name="crearU">¿NO TIENES CUENTA? REGISTRATE</string>
    <!-- DATOS PARA CREAR A CLIENTE -->
    <string name="ingreNom">INGRESE NOMBRE</string>
    <string name="apPaterno">INGRESE APELLIDO PATERNO</string>
    <string name="apMaterno">INGRESE APELLIDO MATERNO</string>
    <string name="domicilio">INGRESE DOMICILIO</string>
    <string name="colonia">INGRESE COLONIA</string>
    <string name="ciudad">INGRESE CIUDAD</string>
    <string name="estado">INGRESE ESTADO</string>
    <string name="cp">INGRESE CP</string>
    <string name="pais">INGRESE PAIS</string>
    <string name="teleCasa">INGRESE TELÉFONO FIJO</string>
    <string name="teleCel">INGRESE TELÉFONO CELULAR</string>
    <string name="ingresarC">INGRESE CORREO</string>
    <string name="ingresarContra">INGRESE CONTRASEÑA</string>
    <string name="confContr">CONFIRMAR CONTRASEÑA</string>
    <string name="tipoUsuario">INGRESE TIPO USUARIO</string>
    <string name="creU">CREAR USUARIO</string>
    <string name="cuentaCreada">¿YA TIENES UNA CUENTA? INICIA SESIÓN</string>
    <string name="insertar">BIENVENIDO ¿QUÉ DESEA HACER?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">CONSULTAR</string>
    <string name="hello_blank_fragment3">ELIMINAR</string>
    <!-- DATOS PARA CREAR MASCOTA -->
    <string name="idPropietario">INGRESE IDPROPIETARIO</string>
    <string name="nombreMascota">INGRESE EL NOMBRE DE LA MASCOTA</string>
    <string name="fechaNac">INGRESE FECHA DE NACIMIENTO(AAAA-MM-DD)</string>
    <string name="especie">INGRESE ESPECIE DE MASCOTA</string>
    <string name="raza">INGRESE RAZA DE MASCOTA</string>
    <string name="sexo">INGRESE SEXO DE MASCOTA</string>
    <string name="color">INGRESE COLOR DE MASCOTA</string>
    <string name="tatuaje">¿TIENE TATUAJES?</string>
    <string name="microchip">¿TIENE MICROCHIP?</string>
    <string name="crearM">CREAR MASCOTA</string>
    <string name="vaciar">VACIAR CAMPOS</string>
    <!-- DATOS PARA CREAR VACUNA -->
    <string name="idMascota">INGRESE EL IDMASCOTA</string>
    <string name="fechaVac">FECHA VACUNACIÓN</string>
    <string name="vacuna">INGRESE NOMBRE VACUNA APLICADA</string>
    <string name="proxFecha">INGRESE PRÓXIMA FECHA A VACUNAR</string>
    <string name="aplicarV">APLICAR VACUNA</string>
    <!-- DATOS PARA CREAR Desparacitar -->
    <string name="fechaDes">FECHA DESPARACITACIÓN</string>
    <string name="producto">INGRESE NOMBRE DEL PRODUCTO APLICADO</string>
    <string name="proxDes">INGRESE PRÓXIMA FECHA PARA DESPARACITAR</string>
    <string name="aplicarD">APLICAR DESPARACITACIÓN</string>

    <string name="hola">HOLA, BIENVENIDO</string>
    <string name="guiaU">GUIA DE USUARIO</string>

    <!-- DATOS PARA Tercer Fragment -->
    <string name="btnConU">CONSULTAR USUARIO</string>
    <string name="btnConM">CONSULTAR MASCOTA</string>
    <string name="btnConD">CONSULTAR DESPARACITACIONES</string>
    <string name="btnConV">CONSULTAR VACUNAS</string>
    <string name="btnConUsuarios">CONSULTAR TODOS LOS USUARIOS</string>
    <string name="btnConMascotas">CONSULTAR TODAS LAS MASCOTAS</string>
    <string name="btnConVacunas">CONSULTAR TODAS LAS VACUNAS</string>
    <string name="btnConDesparacitaciones">CONSULTAR TODAS LAS DESPARACITACIONES</string>

    <!-- DATOS PARA BUSCAR USUARIO -->
    <string name="ingreseIdU">INGRESE EL IDUSUARIO QUE DESEA BUSCAR</string>
    <string name="buscar">BUSCAR</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="limpiar">VACIAR CAMPOS</string>
    <string name="eliminar">ELIMINAR REGISTRO</string>

    <!-- DATOS PARA BUSCAR VACUNA, MASCOTA, DESPARACITACIÓN -->
    <string name="ingreseIdM">INGRESE EL IDMASCOTA QUE DESEA BUSCAR</string>
    <string name="ingreseIdV">INGRESE EL IDVACUNA QUE DESEA BUSCAR</string>
    <string name="ingreseIdD">INGRESE EL IDDESPARACITACIÓN QUE DESEA BUSCAR</string>


</resources>