<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tercerFragmento"
    android:background="#b7a986">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:text="MODIFICAR"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:layout_marginTop="-340dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:fontFamily="@font/balthazar"
        >
    </TextView>

    <Button
        android:id="@+id/botonConUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-250dp"
        android:fontFamily="@font/balthazar"
        android:text="@string/btnConU"
        android:textColor="#ffffff"
        app:backgroundTint="#f57f5b" />

    <Button
        android:id="@+id/botonConMas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-190dp"
        android:fontFamily="@font/balthazar"
        android:text="@string/btnConM"
        android:textColor="#ffffff"
        app:backgroundTint="#f57f5b" />
    <Button
        android:id="@+id/botonConVac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-130dp"
        android:fontFamily="@font/balthazar"
        android:text="@string/btnConV"
        android:textColor="#ffffff"
        app:backgroundTint="#f57f5b"  />
    <Button
        android:id="@+id/botonConDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-70dp"
        android:fontFamily="@font/balthazar"
        android:text="@string/btnConD"
        android:textColor="#ffffff"
        app:backgroundTint="#f57f5b" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#f57f5b"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/balthazar"
        android:text="CONSULTAR"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:textSize="35sp"
        />
    <Button
        android:id="@+id/botonConTUsuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/balthazar"
        android:text="@string/btnConUsuarios"
        android:textColor="#ffffff"
        app:backgroundTint="#f57f5b" />
    <Button
        android:id="@+id/botonConTMascotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="175dp"
        android:fontFamily="@font/balthazar"
        android:text="@string/btnConMascotas"
        android:textColor="#ffffff"
        app:backgroundTint="#f57f5b" />
    <Button
        android:id="@+id/botonConTVacunas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/balthazar"
        android:text="@string/btnConVacunas"
        android:textColor="#ffffff"
        app:backgroundTint="#f57f5b" />
    <Button
        android:id="@+id/botonConTDesparacitaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="265dp"
        android:fontFamily="@font/balthazar"
        android:text="@string/btnConDesparacitaciones"
        android:textColor="#ffffff"
        app:backgroundTint="#f57f5b" />


</FrameLayout>