<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b7a986"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_height="250dp"
        android:layout_width="250dp"
        app:srcCompat="@drawable/logopantalla"
        android:transitionName="logoImageTrans"
        android:layout_gravity="center"
        android:layout_marginTop="-250dp"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:fontFamily="@font/balthazar"
        android:text="@string/bienvenido"
        android:textColor="#ffffff"
        android:textSize="30sp"

        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/balthazar"
        android:text="@string/continuar"
        android:textColor="#ffffff"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:gravity="center"
        android:textColorHint="@color/white"
        app:boxStrokeColor="#FFFFFF"
        app:hintTextColor="#ffffff"
        >

        <EditText
            android:id="@+id/editCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/balthazar"
            android:hint="@string/ingresarC"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:background="#f57f5b"
            android:textColorHint="@android:color/white"
            android:textSize="20sp"
            android:textColorLink="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:gravity="center"
        android:textColorHint="@android:color/white"
        app:boxStrokeColor="#FFffff"
        app:hintTextColor="#ffffff"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/white">

        <EditText
            android:id="@+id/editContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/balthazar"
            android:hint="@string/ingresarContra"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:background="#f57f5b"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#ffffff"
            android:textSize="20sp"
            android:textColorLink="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:background="#f57f5b"
        android:fontFamily="@font/balthazar"
        android:onClick="buscarU"
        android:text="@string/iniciar"
        android:textColor="#ffffff"
        app:backgroundTint="#f57f5b" />


</FrameLayout>