<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B4341"
    tools:context=".crearVacuna" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="510dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColorHint="@android:color/black"
                app:boxStrokeColor="#FF03DAC5"
                app:hintTextColor="@android:color/darker_gray">

            <EditText
                android:id="@+id/editIdMascota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/balthazar"
                android:hint="@string/idMascota"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColorHint="@android:color/black"
                app:boxStrokeColor="#FF03DAC5"
                app:hintTextColor="@android:color/darker_gray">

            <EditText
                android:id="@+id/editFechavac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/balthazar"
                android:hint="@string/fechaVac"
                android:inputType="date"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColorHint="@android:color/black"
                app:boxStrokeColor="#FF03DAC5"
                app:hintTextColor="@android:color/darker_gray">

            <EditText
                android:id="@+id/editVacuna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/balthazar"
                android:hint="@string/vacuna"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColorHint="@android:color/black"
                app:boxStrokeColor="#FF03DAC5"
                app:hintTextColor="@android:color/darker_gray">

            <EditText
                android:id="@+id/editProxVac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/balthazar"
                android:hint="@string/proxFecha"
                android:inputType="date"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnVac"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="520dp"
        android:background="#02DFCB"
        android:fontFamily="@font/balthazar"
        android:text="@string/aplicarV"
        android:textColor="#000000"
        app:backgroundTint="#02DFCB" />
</FrameLayout>